add editing of models from website

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,24 @@ services:
     build: ./app
     ports: ['5000:5000']
     volumes: ['./app:/web']
+  db:
+    image: mysql:5.7
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: ratemyprof
+    ports:
+      - "3306:3306"
+    volumes:
+      - my-datavolume:/var/lib/mysql
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    environment:
+      - PMA_ARBITRARY=1
+    restart: always
+    ports:
+      - 8080:80
+    volumes:
+      - /sessions
+volumes:
+  my-datavolume:
